# nn_terrain_tilde

./: .gitignore  .gitmodules  README.md
docs/: nn.terrain.encode.maxref.xml  nn.terrain.gui.maxref.xml  nn.terrain.record.maxref.xml  nn.terrain~.maxref.xml  nn~.maxref.xml
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cpp  backend.h  terrain.cpp  terrain.h
src/frontend/maxmsp/mc.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/mcs.nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/nn.terrain.encode/: CMakeLists.txt  nn.terrain.encode.cpp
src/frontend/maxmsp/nn.terrain.gui/: CMakeLists.txt  nn.terrain.gui.cpp  pen.h  terrain.h
src/frontend/maxmsp/nn.terrain.record/: CMakeLists.txt  nn.terrain.record.cpp
src/frontend/maxmsp/nn.terrain_tilde/: CMakeLists.txt  nn.terrain_tilde.cpp
src/frontend/maxmsp/nn_tilde/: CMakeLists.txt
src/frontend/maxmsp/shared/: circular_buffer.h  min_dictionary.h  min_path.h  utils.h
src/help/: demo.pt  nn.terrain.encode.maxhelp  nn.terrain.gui.maxhelp  nn.terrain.record.maxhelp  nn.terrain~.maxhelp
src/shared/: circular_buffer.h
